# Software

./: .gitignore  AUTHORS  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  robot.pc.in
Simulation/models/gobelet/: model.config  model.sdf
Simulation/models/gobelet/meshes/: gobelet.dae
Simulation/models/piedjaune/: model.config  model.sdf
Simulation/models/piedvert/: model.sdf
Simulation/models/piedvert/meshes/: EJ_Pied_Jaune.STEP  pied.dae
Simulation/models/robomovies/: model.config  model.sdf  table.dae
Simulation/models/robomovies/materials/scripts/: robomovies.material
Simulation/models/rosebot/: model.config  model.sdf
Simulation/plugins/: .cproject  .project  CMakeLists.txt  rosebot_control.cc
Simulation/worlds/: robomovies.world
src/: Makefile.am  main.c
src/actuators/: Makefile.am  actuators.c  actuators.h  arm.c  arm.h
src/extras/: Makefile.am  action.c  action.h  example.xml  log.c  log.h  sysfs.c  sysfs.h  timer.c  timer.h  xml.c  xml.h
src/extras/roxml/: Makefile.am
src/propulsion/: Makefile.am  move.c  move.h  propulsion.c  propulsion.h
src/scripts/: Servo.py  actuator.py  com_moteur.py  donneescarte.py  homologue.py  lancer.py  robot.py  robot_feedback.py  scenarios.py  startup.py  strategyGobTapis.py  strategyTapis.py  utils.py
src/strategy/: Makefile.am  avoid.c  avoid.h  strategy.c  strategy.h
