AUTOMAKE_OPTIONS = 1.4 foreign
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
config.h.in config.sub configure install-sh \
ltconfig ltmain.sh missing mkinstalldirs \
stamp-h.in acconfig.h depcomp config.h.in~

EXTRA_DIST= \
AUTHORS \
COPYING \
README \
autogen.sh \
robot.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = robot.pc
